Add Maven configuration for Java 16+